styles.css
*, *::before, *::after {
    box-sizing: border-box;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  }
  
  /* comment */
  
  body {
    width: 100vw;
    height: 100vh;
    background-color: rgb(0, 68, 102);
    padding: 0;
    margin: 0;

    display: flex;
    justify-content: center; /* center horizontally */
    align-items: center; /* center vertically */
  }

  /* Hud */

  #hud {
    width: 90%;
    height: 90%;

    display: flex;
    flex-flow: column;
    justify-content: start;
    align-items: center; /* center horizontally */
  }

  /* Header */
  
  .hud-elements {
    width: 100%;
    height: 15%;

    display: grid;
    flex-flow: column;
  }

  #timer {
    font-size: 1.5rem;
    font-weight: bold;
    color: white;
    text-align: center;
  }

  #hud-text {
    font-size: 1.5rem;
    font-weight: bold;
    color: white;
    text-align: center;
  }

  #progress-bar {
    width: 80%;
    height: 1.5rem;
    background-color: white;
    border: 0.2rem solid black;
    border-radius: 50px;
    margin-top: 0.8rem;
    margin-bottom: 1rem;
    justify-self: center;
    overflow: hidden;
  }

  #progress-bar-full {
    width:0%;
    height: 100%;
    background: rgb(0, 255, 255);
  }
  
  /* Question Window */

  .question-window {
    width: 100%;
    max-height: 80%;
    flex: 1; /* flex to fill available height */
    background-color: white;
    border-radius: 5px;
    box-shadow: 0 0 10px 2px;
    padding: 10px;

    display: flex;
    flex-flow: column;
    align-items: center;
  }
  
  /* Image */

  img {
    padding-bottom: 10px;
    max-width: 100%;
    height: 80%;
  }

  /* Button Space */

  .button-space {
    width: 100%;
    flex: 1;

    display: flex;
    flex-flow: column;
    align-items: center;

    background-color: yellow;
  }

  .btn {
    font-size: 1.5rem;
    color: white;
    background-color: rgb(0, 170, 255);
    border: 1px solid rgb(0, 102, 153);
    border-radius: 15px;
    padding: 5px 10px;
  }

  /* Answer Buttons */

  .btn-grid {
    width: 100%;
    flex: 1;
    padding: 0.8rem;
    gap: 1.5rem;

    display: grid;
    grid-template-columns: auto auto auto;
    justify-content: center;
    background-color: red;
  }

  .btn-grid button {
    width: 100%;
    aspect-ratio: 1;
    background-color: white;
    columns: 1;
  }

  .answer-btns {
    background-image: url('images/blackSquare.jpg');
    background-size: 100%;
    border: 5px solid rgb(0, 102, 153);
  }
  
  /* Control Buttons */

  .controls {
    width: 100%;
    align-self: end;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas: "cont cont cont " "prev finish next";

    background-color: pink;
  }

  .continue-btn {
    font-size: 2rem;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: center;
    grid-area: cont;
  }

  .start-btn {
    font-size: 2rem;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: center;
    grid-area: cont;
  }

  .prev-btn {
    font-size: 1.5rem;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: start;
    grid-area: prev;
  }

  .next-btn {
    font-size: 1.5rem;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: end;
    grid-area: next;
  }

  .finish-btn{
    font-size: 1.5rem;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: center;
    grid-area: finish;
  }

  /* Attributes */

  .hide {
    display: none;
  }

  /* Button Attributes */

  .btn:hover {
    border-color: black;
  }
  
  .btn.selected {
    border-color: green;
  }

  .btn.unavailable {
    color: rgb(4, 45, 99);
    background-color: rgb(102, 136, 153);
  }

